@@ -133,13 +133,8 @@
 			<version>${version.org.wildfly.arquillian}</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- 
-		<dependency>
-			<groupId>org.eu.ingwar.tools</groupId>
-			<artifactId>arquillian-suite-extension</artifactId>
-			<version>1.2.0</version>
-			<scope>test</scope>
-		</dependency>-->
+		<!-- <dependency> <groupId>org.eu.ingwar.tools</groupId> <artifactId>arquillian-suite-extension</artifactId> 
+			<version>1.2.0</version> <scope>test</scope> </dependency> -->
 		<dependency>
 			<groupId>org.jboss.logging</groupId>
 			<artifactId>jboss-logging</artifactId>
@@ -192,71 +187,13 @@
 		</dependency>
 	</dependencies>
 
-	<build>
 
+
+	<build>
+		<!-- <defaultGoal>clean install wildfly:start wildfly:execute-commands 
+			wildfly:deploy</defaultGoal> -->
 		<pluginManagement>
 			<plugins>
-				<!-- workaround for broken OpenJDK 8u181-b13-2 on Debian/Ubuntu which 
-					causes unit tests to fail, see https://issues.apache.org/jira/browse/SUREFIRE-1588 -->
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<!-- <configuration>
-						<forkCount>3</forkCount>
-						<reuseForks>true</reuseForks>
-						<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
-					</configuration>
-					 -->
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.6.1</version>
-					<configuration>
-						<source>1.8</source>
-						<target>1.8</target>
-					</configuration>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.6.1</version>
-					<configuration>
-						<source>1.8</source>
-						<target>1.8</target>
-					</configuration>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<configuration>
-						<argLine>-Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
-					</configuration>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<configuration>
-						<compilerArgument>-Xlint:unchecked,deprecation</compilerArgument>
-					</configuration>
-				</plugin>
-				<!-- embedded Tomcat 9 plugin configuration, use "mvn cargo:run" to run -->
-				<plugin>
-					<groupId>org.codehaus.cargo</groupId>
-					<artifactId>cargo-maven2-plugin</artifactId>
-					<version>1.7.0</version>
-					<configuration>
-						<container>
-							<containerId>tomcat9x</containerId>
-							<artifactInstaller>
-								<groupId>org.apache.tomcat</groupId>
-								<artifactId>tomcat</artifactId>
-								<version>${tomcat.version}</version>
-							</artifactInstaller>
-						</container>
-					</configuration>
-				</plugin>
-
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-checkstyle-plugin</artifactId>
@@ -279,6 +216,16 @@
 						</execution>
 					</executions>
 				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>${version.maven.compiler.plugin}</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-war-plugin</artifactId>
+					<version>${version.maven.war.plugin}</version>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 		<plugins>
@@ -296,10 +243,39 @@
 						<configuration>
 							<url>https://download.jboss.org/wildfly/16.0.0.Final/wildfly-16.0.0.Final.zip</url>
 							<unpack>true</unpack>
-							<outputDirectory>${project.build.directory}/</outputDirectory>
+							<outputDirectory>${project.basedir}/</outputDirectory>
 						</configuration>
 					</execution>
 				</executions>
+				<inherited>false</inherited>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.wildfly.plugins</groupId>
+				<artifactId>wildfly-maven-plugin</artifactId>
+				<version>${version.wildfly.maven.plugin}</version>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${version.maven.surefire.plugin}</version>
+				<configuration>
+					<excludes>
+						<exclude>**/integration/*</exclude>
+					</excludes>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -321,10 +297,11 @@
 		</plugins>
 	</build>
 
+
 	<modules>
-		<module>app</module>
 		<module>persistence</module>
 		<module>services</module>
+		<module>app</module>
 	</modules>
 
 	<repositories>
